# stories_py_conv

./: .gitignore  .swp  AGENTS.md  README.md  hash_crack_helper.py  main.py  pyproject.toml  txd_extract_test.py
doc/: glossary.md  overview.md
doc/architecture/: cli_contract.md  data_flow.md  pipeline.md
doc/domain/: lvz_img_structure.md  naming_and_links.md  resource_resolution.md  transform_model.md
doc/playbooks/: add_cli_flag.md  add_decoder.md  debug_missing_model.md  fix_transform_bug.md
doc/rules/: coding_rules.md  export_rules.md  geometry_rules.md  transform_rules.md
doc/tasks/: README.md  T000_task_template.md  T001 TXD Packing Opaque DXT Policy.md  T002 TXD Packing Quality Gate.md  T003 Streamed Texture Name Noise Filter.md  T004 Opaque DXT1 Transparent Block Fix.md  T005 Hidden Pass Supplemental Streamed Textures.md  T006 Conversion Pipeline Performance Breakdown.md  T006 Tiny Indexed Streamed Gradient Decode.md  T007 Streamed Neon Material Texture Recovery.md  T008 Simplify VCS Name Table Loading.md
doc/tests/: expected_outputs.md  invariants.md
src/vcs_map_extract/: app.py  cli.py  constants.py  external_libs.py  game_dat.py  ide_catalog.py  img_io.py  ipl_parser.py  mathutils_compat.py  models.py  name_resolver.py  packimg.py  perf.py  progress.py  pure_backend.py  reference_data.py  report.py  streamed_backend.py  streamed_world.py  utils.py
src/vcs_map_extract/data/reference/: vcsnames.ini
